<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_gravity="center"
        android:gravity="center"
        tools:ignore="MissingPrefix">

    <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_220dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10dp">

        <LinearLayout
            android:layout_width="@dimen/_220dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grad_blue_red"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <com.pertamina.digitalcontract.util.FontAwasomeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fa_info_circle"
                    android:textColor="@color/white"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/dialog_universal_warning_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Input Sign "
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    fontPath="fonts/Montserrat-SemiBold.ttf" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="22dp"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:paddingTop="22dp">

                <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signArea"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/material_grey_200"
                    app:penColor="#000"
                    app:penMaxWidth="8dp"
                    app:penMinWidth="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <TextView
                    android:id="@+id/dialog_universal_warning_reset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_dialog_warning"
                    android:gravity="center"
                    android:minWidth="64dp"
                    android:padding="8dp"
                    android:text="@string/reset_signature"
                    android:textColor="@color/cpb_blue"
                    android:textSize="@dimen/_12sp"
                    fontPath="fonts/Montserrat-SemiBold.ttf" />

                <TextView
                    android:id="@+id/dialog_universal_warning_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_dialog_warning"
                    android:gravity="center"
                    android:minWidth="64dp"
                    android:padding="8dp"
                    android:text="@string/dialog_cancel"
                    android:textColor="@color/material_grey_600"
                    android:textSize="@dimen/_12sp"
                    android:visibility="visible"
                    fontPath="fonts/Montserrat-SemiBold.ttf" />

                <TextView
                    android:id="@+id/dialog_universal_warning_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/selector_dialog_warning"
                    android:gravity="center"
                    android:minWidth="64dp"
                    android:padding="8dp"
                    android:text="@string/sign_yes"
                    android:textColor="@color/redSoft"
                    android:textSize="@dimen/_12sp"
                    fontPath="fonts/Montserrat-SemiBold.ttf" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>