<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grad_blue_red"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <com.pertamina.digitalcontract.util.FontAwasomeTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fa_info_circle"
                android:textColor="@color/white"
                android:textSize="@dimen/_30sp" />

            <TextView
                android:id="@+id/dialog_universal_warning_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confirm Fingerprint"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sp"
                fontPath="fonts/Montserrat-SemiBold.ttf" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingTop="20dp">

            <ImageView
                android:id="@+id/fingerprint_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_fingerprint" />

            <TextView
                android:id="@+id/fingerprint_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fingerprint_sensor"
                android:textAlignment="center"
                android:textColor="@color/material_grey_600"
                android:textSize="@dimen/_10sp"
                fontPath="fonts/Montserrat-Regular.ttf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/dialog_universal_warning_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/selector_dialog_warning"
                android:gravity="center"
                android:minWidth="64dp"
                android:padding="8dp"
                android:text="@string/dialog_cancel"
                android:textColor="@color/material_grey_600"
                android:textSize="@dimen/_11sp"
                fontPath="fonts/Montserrat-Medium.ttf"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>